--- a/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
+++ b/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
@@ -1,3 +1,17 @@
+---
+draft: false 
+date: 2023-03-01
+categories:
+  - Tutoriais
+tags:
+  - github
+  - linux
+  - queroajudar
+authors:
+  - artumosgoc
+# readtime: 10
+comments: true
+---
 # CHOWN O QUE É?
 
 > O comando chown altera a propriedade do usuário de um arquivo, diretório ou link no Linux. Cada arquivo está associado a um usuário ou grupo proprietário. É fundamental configurar as permissões de arquivos e pastas corretamente.
