--- a/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
+++ b/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
@@ -14,7 +14,9 @@ comments: true
 ---
 # CHOWN O QUE É?
 
-> O comando chown altera a propriedade do usuário de um arquivo, diretório ou link no Linux. Cada arquivo está associado a um usuário ou grupo proprietário. É fundamental configurar as permissões de arquivos e pastas corretamente.
+O comando `chown` altera a propriedade do usuário de um arquivo, diretório ou link no Linux. Cada arquivo está associado a um usuário ou grupo proprietário. É fundamental configurar as permissões de arquivos e pastas corretamente.
+
+<!-- more -->
 
 ## Requisitos de uso 
 
@@ -81,21 +83,33 @@ sudo chown :Grupo0 Pasta/Arquivo
 - Pasta/Arquivo – Diretório ou Arquivo.
 
 # Imagens
-> Usando usuário: 
+Usando usuário: 
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/62bce262-a411-4745-a018-fda0f498ef2e)
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/d4f5cbf7-17a8-4150-8061-2ac772a7f61e)
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/d4738a92-75ad-4c8e-8682-5316da4bf40c)
 
-> Usando UID:
+
+Usando UID:
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/62bce262-a411-4745-a018-fda0f498ef2e)
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/3b2ddd96-0245-48d7-a015-752e71d9bf1c)
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/d4738a92-75ad-4c8e-8682-5316da4bf40c)
 
-> Mostrar permissões do diretório atual:
+
+Mostrar permissões do diretório atual:
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/ac364ece-a253-4c2e-91d1-9147161da7b1)
 
-> Pegar UID
+
+Pegar UID
+
 ![image](https://github.com/codaqui/institucional/assets/63540372/abd41bd3-7f2e-40b1-8163-f145a10c21ef)
+
 
 # Extra
 
