FIX: CHOWN MARKDOWN

--- a/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
+++ b/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
@@ -50,11 +50,11 @@ chown [Opção] [Usuário][:Grupo] [Arquivo's/Diretório]
 
 ## Como alterar o proprietário de um arquivo no dia a dia?
 
- Terminal em root
+>Terminal em root
 ```console 
 chown Usuário0 Pasta/Arquivo
 ```
- Terminal sem root
+>Terminal sem root
 ```console 
 sudo chown Usuário0 Pasta/Arquivo
 ```
