feat: README how to install github and configure

--- a/docs/blog/posts/tutoriais/2025_08_18_GIT.md
+++ b/docs/blog/posts/tutoriais/2025_08_18_GIT.md
@@ -90,10 +90,42 @@ git config --global user.name "Seu Nome"
 git config --global user.email "seuemail@exemplo.com"
 ```
 
-**Testar no VSCode tentando clonar um repositório:**
+**No VSCode**
 
-1. **Clonar um repositório:**
+1️⃣ **Clonar um repositório para testar o funcionamento(metodo fácil):**
 ```console
 # Institucional da codaqui por exemplo
 git clone https://github.com/codaqui/institucional.git
 ```
+## 🚀 Clonando um Repositório no VSCode
+
+2️⃣ **No seu VSCode, clique no ícone de controle de código-fonte**  
+
+<img width="72" height="63" alt="image" src="https://github.com/user-attachments/assets/fd5c2a4f-409a-4298-a62e-0ed359244679" />
+
+---
+
+3️⃣ **Clique em _CLONE REPOSITORY_**  
+
+<img width="264" height="34" alt="image" src="https://github.com/user-attachments/assets/32475ffe-7c3e-4cda-8a3d-1204bba19c9c" />
+
+---
+
+4️⃣ **Na parte inferior da barra de pesquisa, selecione _CLONE FROM GITHUB_**  
+
+<img width="627" height="74" alt="image" src="https://github.com/user-attachments/assets/f2cd252d-d99d-4806-a26c-3a10f510e8fa" />
+
+---
+
+5️⃣ **Será exibida a seguinte mensagem:**  
+
+<img width="570" height="203" alt="image" src="https://github.com/user-attachments/assets/3d3a4d6d-e8b2-4c88-9cde-5c3a5bc90ab4" />
+
+---
+
+6️⃣ **Clique em ✅ _Allow_**  
+
+---
+
+7️⃣ **Faça login no GitHub** 🔑
+
