--- a/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
+++ b/docs/blog/posts/tutoriais/2024_03_13_CHOWN.md
@@ -12,7 +12,7 @@ authors:
 # readtime: 10
 comments: true
 ---
-# CHOWN O QUE É?
+# CHOWN: O que é?
 
 O comando `chown` altera a propriedade do usuário de um arquivo, diretório ou link no Linux. Cada arquivo está associado a um usuário ou grupo proprietário. É fundamental configurar as permissões de arquivos e pastas corretamente.
 
@@ -38,13 +38,13 @@ sudo su
 # Linux Chown Syntax
 
 ```console 
-chown [Opção] [Usuário][:Grupo] [Arquivo's/Diretório] 
+chown [Opção] [Usuário][:Grupo] [Arquivos/Diretórios] 
 ```
 - [Opção] – O comando pode ser usado com ou sem opções adicionais.
 - [Usuário] – O nome de usuário ou o ID de usuário numérico do novo proprietário de um arquivo.
 - [:] – Use dois pontos ao alterar um grupo de um arquivo.
 - [Grupo] – Alterar a propriedade do grupo de um arquivo é opcional.
-- Arquivo's/Diretório  – Alvo
+- Arquivos/Diretórios – Alvo
 
 > Não necessariamente precisa de um grupo, veremos mais a baixo!!
 
